--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                     <button class="go-modal">Получить консультацию</button>
                 </div>
                 <div class="col-12">
-                    <div class="vector"> <img src="img/icons/Vector-down.svg" alt=""> </div>
+                    <div href="#uslugi" class="vector scroll-weed-everyday"> <img src="img/icons/Vector-down.svg" alt=""> </div>
                 </div>
             </div>
         </div>
@@ -113,33 +113,33 @@
                 <div class="col-12">
                     <h2>наши услуги</h2> </div>
                 <div class="col-6"> <img src="img/block-2/first.jpg" alt="">
-                <button data-type="Cделать заказ на сварку" class="go-modal d-sm-none">Сделать заказ на сварку</button></div>
+                <button data-type="Cделать заказ на сварку" class="go-modal button d-sm-none">Сделать заказ на сварку</button></div>
                 <div class="col-6">
                     <h3>Сварочные работы</h3>
                     <p>Производим сварочные работы на выезде. Варим трубы, уголки, петли, свариваем решетки и ограждения, изготавливаем металлоконструкции. Сварка инвертором. Сварка аргоном. Газовая сварка и резка металла.</p>
-                    <button data-type="Cделать заказ на сварку" class="go-modal d-sm-block d-none">Сделать заказ на сварку</button>
+                    <button data-type="Cделать заказ на сварку" class="go-modal d-sm-block d-none button">Сделать заказ на сварку</button>
                 </div>
                 <div class="col-6 go-right">
                     <h3>порошковая покраска</h3>
                     <p>Подготовка поверхности к покраске, нанесение слоя порошковой краски на окрашиваемую поверхность в камере напыления. Оплавление и полимеризация порошкового покрытия в печи полимеризации. Формирование пленки покрытия. Охлаждение и отвержение краски.</p>
-                    <button data-type="Сделать заказ на покраску" class="go-modal d-sm-block d-none">Сделать заказ на покраску</button>
+                    <button data-type="Сделать заказ на покраску" class="go-modal d-sm-block d-none button mr">Сделать заказ на покраску</button>
                 </div>
                 <div class="col-6"> <img src="img/block-2/second.jpg" alt="">
-                <button data-type="Сделать заказ на покраску" class="go-modal d-sm-none">Сделать заказ на покраску</button> </div>
+                <button data-type="Сделать заказ на покраску" class="go-modal button button d-sm-none">Сделать заказ на покраску</button> </div>
                 <div class="col-6"> <img src="img/block-2/third.jpg" alt="">
-                <button data-type="Сделать заказ на гибку/резку" class="go-modal d-sm-none">Сделать заказ на гибку/резку</button> </div>
+                <button data-type="Сделать заказ на гибку/резку" class="go-modal button d-sm-none">Сделать заказ на гибку/резку</button> </div>
                 <div class="col-6">
                     <h3>Гибка, резка металла</h3>
                     <p>Производим сварочные работы на выезде. Варим трубы, уголки, петли, свариваем решетки и ограждения, изготавливаем металлоконструкции. Сварка инвертором. Сварка аргоном. Газовая сварка и резка металла.</p>
-                    <button data-type="Сделать заказ на гибку/резку" class="go-modal d-sm-block d-none">Сделать заказ на гибку/резку</button>
+                    <button data-type="Сделать заказ на гибку/резку" class="go-modal d-sm-block d-none button">Сделать заказ на гибку/резку</button>
                 </div>
                 <div class="col-6 go-right">
                     <h3>изготовление мебели</h3>
                     <p>Изготовление мебели по вашим размерам и под заказ. Стильная, эксклюзивная мебель с характером. Лестницы, столы, стулья, ограждения, перегородки, светильники, кровати, решетки.</p>
-                    <button data-type="Заказать мебель" class="go-modal d-sm-block d-none">Заказать мебель</button>
+                    <a data-type="Заказать мебель" href="/mebel/" class="button button-desktop mr">Заказать мебель</a>
                 </div>
                 <div class="col-6"> <img src="img/block-2/second.jpg" alt="">
-                <button data-type="Заказать мебель" class="go-modal d-sm-none">Заказать мебель</button> </div>
+                <a data-type="Заказать мебель" href="/mebel/" class="button button-mobile like-button">Заказать мебель</a> </div>
                 <div class="col-12 text-center">
                     <label><i>Необходимо выполнить работу по металлу?</i>
                         <br>ЗВОНИТЕ +7 3952 668-703</label>
@@ -155,7 +155,7 @@
                 <div class="col-10">
                     <iframe src="https://www.youtube.com/embed/l2mTiHmyBTk?rel=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
                     <p>PRO METAL 38 — это не просто мастерская по ремонту и изготовлению продуктов металла, это компания обладающая своей философией и идиологией. Мы гнем, режем, пилим, варим метал. Наша миссия: помогать людям и облегчать им жизнь, за счет изготовления метало конструкций.</p> <img src="img/about.jpg" alt="">
-                    <p>Современное оборудование и опытные мастера своего дела - залог качественно выполненной детали. Наш цех оснащен современным оборудованием для работыс металом и команда укомплектованна так, что за качество продуктамы отвечаем на все 100%. Мы творчески подходим к задачам и готовына необычные, не стандартные проекты.</p>
+                    <p>Современное оборудование и опытные мастера своего дела - залог качественно выполненной детали. Наш цех оснащен современным оборудованием для работыс металом и команда укомплектованна так, что за качество продукта мы отвечаем на все 100%. Мы творчески подходим к задачам и готовы на необычные, не стандартные проекты.</p>
                 </div>
             </div>
         </div>
@@ -204,7 +204,8 @@
                 <div class="col-sm-7 col-12">
                     <h2>наши работы в instagram</h2> </div>
                 <div class="col-12">
-                    <a href="https://www.instagram.com/_all_steel_irkutsk/" class="instagram__link" target="_blank"> <img src="img/instagram.jpg" alt=""> </a>
+                    <!-- SnapWidget -->
+                    <iframe src="https://snapwidget.com/embed/600869" class="snapwidget-widget" allowtransparency="true" frameborder="0" scrolling="no" style="border:none; overflow:hidden;"></iframe>
                 </div>
                 <div class="col-sm-8 col-12"> <span class="instagram__span">В наш профиль мы еженедельно публикуем жизнь компании и наши новые работы. Заходите подписыватесь > <a href="https://www.instagram.com/_all_steel_irkutsk/">@_all_steel_irkutsk</a></span> </div>
             </div>
@@ -296,6 +297,10 @@
                                 <div class="col-12 d-flex align-items-center">
                                     <img src="img/icons/mail.svg" alt="" class="map__icon">
                                     <a href="mailto:mail@iocent.ru" class="map__mail">mail@iocent.ru</a>
+                                </div>
+                                <div class="col-12 d-flex align-items-center">
+                                    <img src="img/icons/mail.svg" alt="" class="map__icon">
+                                    <a href="https://www.instagram.com/_all_steel_irkutsk/" target="_blank" class="map__mail">Instagram</a>
                                 </div>
                             </div>
                         </div>
