--- a/mebel/index.html
+++ b/mebel/index.html
@@ -118,12 +118,10 @@
                         <div class="row align-items-center justify-content-between">
                             <div class="col-lg-4 col-md-3 col-12">
                                 <a href="/">
-                                    <object codebase="http://www.apple.com/qtactivex/qtplugin.cab"
-                                            classid="clsid:02BF25D5-8C17-4B23-BC80-D3488ABDDC6B">
-                                        <param name="src" value="../img/logo.mov">
-                                        <embed src="../img/logo.mov"
-                                               pluginspage="http://www.apple.com/quicktime/download/"></embed>
-                                    </object>
+                                    <video src="../img/logo.mov">
+                                        <embed src="../img/logo.mov" type="video/quicktime" width="640" height="480">
+                                    </video>
+                                </a>
                             </div>
                             <div class="col-lg-7 col-md-8 col-12">
                                 <div class="row justify-content-between">
