--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                     <div class="container">
                         <div class="row align-items-center justify-content-between">
                             <div class="col-lg-4 col-md-3 col-12">
-                                <a href="/"><img src="img/logo.png" class="w-100" alt=""></a>
+                                <a href="/"><img src="../img/logo.gif" alt="" class="w-100"></a>
                             </div>
                             <div class="col-lg-7 col-md-8 col-12">
                                 <div class="row justify-content-between">
@@ -189,10 +189,10 @@
                 <h3>изготовление мебели</h3>
                 <p>Изготовление мебели по вашим размерам и под заказ. Стильная, эксклюзивная мебель с характером.
                     Лестницы, столы, стулья, ограждения, перегородки, светильники, кровати, решетки.</p>
-                <a data-type="Заказать мебель" href="/mebel/" class="button button-desktop mr">Заказать мебель</a>
+                <a data-type="Выбрать мебель" href="/mebel/" class="button button-desktop mr">Выбрать мебель</a>
             </div>
             <div class="col-6"><img src="img/block-2/second.jpg" alt="">
-                <a data-type="Заказать мебель" href="/mebel/" class="button button-mobile like-button">Заказать
+                <a data-type="Выбрать мебель" href="/mebel/" class="button button-mobile like-button">Выбрать
                     мебель</a></div>
             <div class="col-12 text-center">
                 <label><i>Необходимо выполнить работу по металлу?</i>
