--- a/legal/index.html
+++ b/legal/index.html
@@ -77,7 +77,7 @@
                         <div class="container">
                             <div class="row align-items-center justify-content-between">
                                 <div class="col-lg-4 col-md-3 col-12">
-                                    <a href="/"><img src="../img/logo.png" class="w-100" alt=""></a>
+                                    <a href="/"><img src="../img/logo.gif" alt="" class="w-100"></a>
                                 </div>
                                 <div class="col-lg-7 col-md-8 col-12">
                                     <div class="row justify-content-between">
@@ -170,6 +170,8 @@
                         <br>Утверждаю
                         <br>ЧУ ДПО «ИОЦ»
                         <br>05.08.2018 г.</p>
+                        <br>
+                        <a href="/">На главную</a>
                 </div>
             </div>
         </div>
