--- a/mebel/index.html
+++ b/mebel/index.html
@@ -118,9 +118,7 @@
                         <div class="row align-items-center justify-content-between">
                             <div class="col-lg-4 col-md-3 col-12">
                                 <a href="/">
-                                    <video src="../img/logo.mov">
-                                        <embed src="../img/logo.mov" type="video/quicktime" width="640" height="480">
-                                    </video>
+                                    <img src="../img/logo.gif" alt="" class="w-100">
                                 </a>
                             </div>
                             <div class="col-lg-7 col-md-8 col-12">
