--- a/mebel/index.html
+++ b/mebel/index.html
@@ -118,7 +118,7 @@
                         <div class="row align-items-center justify-content-between">
                             <div class="col-lg-4 col-md-3 col-12">
                                 <a href="/">
-                                    <img src="../img/logo.gif" alt="" class="w-100">
+                                    <img src="../img/logo.png" alt="" class="w-100">
                                 </a>
                             </div>
                             <div class="col-lg-7 col-md-8 col-12">
@@ -354,10 +354,10 @@
                             </div>
                             <div class="col-12 d-flex align-items-center"><img src="../img/icons/phone-black.svg" alt=""
                                                                                class="map__icon"> <a
-                                    href="tel:89140040430" class="map__phone">8 914 004 04 30</a></div>
+                                    href="tel:83952652195" class="map__phone">8 (3952) 652-195</a></div>
                             <div class="col-12 d-flex align-items-center"><img src="../img/icons/mail.svg" alt=""
                                                                                class="map__icon"> <a
-                                    href="mailto:mail@iocent.ru" class="map__mail">mail@iocent.ru</a></div>
+                                    href="mailto:PROMETAL38@YANDEX.RU" class="map__mail">PROMETAL38@YANDEX.RU</a></div>
                             <div class="col-12 d-flex align-items-center">
                                 <img src="img/icons/instagram.svg" alt="" class="map__icon">
                                 <a href="https://www.instagram.com/_all_steel_irkutsk/" target="_blank"
