--- a/index.html
+++ b/index.html
@@ -12,13 +12,20 @@
     <meta name="description" content="">
     <!--  icon  -->
     <link rel="shortcut icon" href="/favicon.ico?">
-    <link rel="apple-touch-icon-precomposed" href="/favicon.png">
+    <link rel="icon" type="image/png" href="/favicon.ico?">
+    <link rel="apple-touch-icon" href="/favicon.ico?">
     <!--  css   -->
     <link rel="stylesheet" href="/ProximaNova/font.css">
     <link rel="stylesheet" href="/css/bootstrap-grid.min.css">
     <link rel="stylesheet" href="/css/checkbox.css">
     <link rel="stylesheet" href="/css/index.css">
     <link rel="stylesheet" href="/css/media.css">
+    <link rel="stylesheet" href="/css/animate.min.css">
+
+    <script src="js/wow.js"></script>
+    <script>
+        new WOW().init();
+    </script>
     <title>Прометалл</title>
 </head>
 
@@ -98,7 +105,7 @@
                     <div class="container">
                         <div class="row align-items-center justify-content-between">
                             <div class="col-lg-4 col-md-3 col-12">
-                                <a href="/"><img src="../img/logo.gif" alt="" class="w-100"></a>
+                                <a href="/"><img src="../img/logo.png" alt="" class="w-100"></a>
                             </div>
                             <div class="col-lg-7 col-md-8 col-12">
                                 <div class="row justify-content-between">
@@ -115,9 +122,9 @@
                                                                                            class="link scroll-weed-everyday">КОНТАКТЫ</a>
                                     </div>
                                     <div class="col-md-auto col-12">
-                                        <a href="tel:83952668703" class="phone"><img src="img/icons/phone.svg" alt=""
-                                                                                     class="icon">8 (3952) 668 703</a>
-                                        <a href="mailto:prometal38@yandex.ru" class="mail">prometal38@yandex.ru</a>
+                                        <a href="tel:83952652195" class="phone"><img src="img/icons/phone.svg" alt="" class="icon">8 (3952) 652 195</a>
+                                        <a href="tel:89087736960" class="phone"><img src="img/icons/mobile.svg" alt="" class="icon">8 (908) 773 6960 </a>
+                                        <div class="icon-sn"><a href="viber://chat?number=+79087736960"><img src="/img/icons/vib.svg" alt=""></a><a href=""><img src="/img/icons/tg.svg" alt=""></a><a href="https://api.whatsapp.com/send?phone=89087736960"><img src="/img/icons/wa.svg" alt=""></a></div>
                                     </div>
                                 </div>
                             </div>
@@ -127,10 +134,10 @@
             </div>
             <div class="col-md-auto col-12">
                 <h1>Профессионалы<br>по металлу</h1>
-                <p>Сварочные работы, порошковая покраска,
-                    <br>гибка и резка металла, производство
-                    <br>мебели и металлоконструкций</p>
-                <button class="go-modal">Получить консультацию</button>
+                <p><span class="wow slideInRight" data-wow-delay="0.2s">Сварочные работы, порошковая покраска,</span>
+                    <span class="wow slideInRight" data-wow-delay="0.4s">Пламенная резка и раскрой металла на станке с ЧПУ</span>
+                    <span class="wow slideInRight" data-wow-delay="0.6s">мебели и металлоконструкций</span></p>
+                <button class="go-modal wow zoomIn" data-wow-delay="0.9s">Получить консультацию</button>
             </div>
             <div class="col-12">
                 <div href="#uslugi" class="vector scroll-weed-everyday"><img src="img/icons/Vector-down.svg" alt="">
@@ -167,7 +174,7 @@
                 </button>
             </div>
             <div class="col-6"><img src="img/block-2/second.jpg" alt="">
-                <button data-type="Сделать заказ на покраску" class="go-modal button button d-sm-none">Сделать заказ на
+                <button data-type="Сделать заказ на покраску" class="go-modal button d-sm-none">Сделать заказ на
                     покраску
                 </button>
             </div>
@@ -177,11 +184,11 @@
                 </button>
             </div>
             <div class="col-6">
-                <h3>Гибка, резка металла</h3>
+                <h3>Пламенная резка и раскрой металла на станке с ЧПУ</h3>
                 <p>Производим сварочные работы на выезде. Варим трубы, уголки, петли, свариваем решетки и ограждения,
                     изготавливаем металлоконструкции. Сварка инвертором. Сварка аргоном. Газовая сварка и резка
                     металла.</p>
-                <button data-type="Сделать заказ на гибку/резку" class="go-modal d-sm-block d-none button">Сделать заказ
+                <button data-type="Пламенная резка и раскрой металла на станке с ЧПУ" class="go-modal d-sm-block d-none button">Сделать заказ
                     на гибку/резку
                 </button>
             </div>
@@ -191,12 +198,12 @@
                     Лестницы, столы, стулья, ограждения, перегородки, светильники, кровати, решетки.</p>
                 <a data-type="Выбрать мебель" href="/mebel/" class="button button-desktop mr">Выбрать мебель</a>
             </div>
-            <div class="col-6"><img src="img/block-2/second.jpg" alt="">
+            <div class="col-6"><img src="img/block-2/fourth.jpg" alt="">
                 <a data-type="Выбрать мебель" href="/mebel/" class="button button-mobile like-button">Выбрать
                     мебель</a></div>
             <div class="col-12 text-center">
                 <label><i>Необходимо выполнить работу по металлу?</i>
-                    <br>ЗВОНИТЕ +7 3952 668-703</label>
+                    <br>ЗВОНИТЕ <a href="tel:+73952668703">+7 3952 668-703</a></label>
             </div>
         </div>
     </div>
@@ -207,14 +214,14 @@
             <div class="col-12">
                 <h2>О нас</h2></div>
             <div class="col-10">
-                <iframe src="https://www.youtube.com/embed/l2mTiHmyBTk?rel=0" frameborder="0"
+                <iframe src="https://www.youtube.com/embed/qgbC_UOfGXc?rel=0" frameborder="0"
                         allow="autoplay; encrypted-media" allowfullscreen></iframe>
                 <p>PRO METAL 38 — это не просто мастерская по ремонту и изготовлению продуктов металла, это компания
-                    обладающая своей философией и идиологией. Мы гнем, режем, пилим, варим метал. Наша миссия: помогать
-                    людям и облегчать им жизнь, за счет изготовления метало конструкций.</p> <img src="img/about.jpg"
+                    обладающая своей философией и идиологией. Мы гнем, режем, пилим, варим металл. Наша миссия: помогать
+                    людям и облегчать им жизнь, за счет изготовления металлоконструкций.</p> <img src="img/about.jpg"
                                                                                                   alt="">
                 <p>Современное оборудование и опытные мастера своего дела - залог качественно выполненной детали. Наш
-                    цех оснащен современным оборудованием для работыс металом и команда укомплектованна так, что за
+                    цех оснащен современным оборудованием для работыс металлом и команда укомплектована так, что за
                     качество продукта мы отвечаем на все 100%. Мы творчески подходим к задачам и готовы на необычные, не
                     стандартные проекты.</p>
             </div>
@@ -258,7 +265,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-sm-2 col-12 order-1"><img src="img/callback__man.png" alt="" class="first-callback__man">
+            <div class="col-sm-2 col-12 order-1"><div class="first-callback__man"><img src="img/callback__man.png" alt="" class="h-100 wow fadeInUp" data-wow-delay="0.1s"></div>
             </div>
         </div>
     </div>
@@ -268,13 +275,21 @@
         <div class="row justify-content-center">
             <div class="col-sm-7 col-12">
                 <h2>наши работы в instagram</h2></div>
-            <div class="col-12">
-                <!-- SnapWidget -->
-                <iframe src="https://snapwidget.com/embed/600869" class="snapwidget-widget" allowtransparency="true"
-                        frameborder="0" scrolling="no" style="border:none; overflow:hidden;"></iframe>
+            <div class="col-sm-8 col-12">
+                <div class="row">
+                    <div class="col-4"><a class="instagram__link" href="https://www.instagram.com/p/BVJPB3KgOsy/?taken-by=_all_steel_irkutsk" target="_blank"><img src="img/instagram/first.jpg" alt=""></a></div>
+                    <div class="col-4"><a class="instagram__link" href="https://www.instagram.com/p/BoJfnA4hfZQ/?taken-by=_all_steel_irkutsk" target="_blank"><img src="img/instagram/sixth.jpg" alt=""></a></div>
+                    <div class="col-4"><a class="instagram__link" href="https://www.instagram.com/p/BRBeH-WAtWs/?taken-by=_all_steel_irkutsk" target="_blank"><img src="img/instagram/second.jpg" alt=""></a></div>
+                    <div class="col-4"><a class="instagram__link" href="https://www.instagram.com/p/BoJfnA4hfZQ/?taken-by=_all_steel_irkutsk" target="_blank"><img src="img/instagram/seventh.jpg" alt=""></a></div>
+                    <div class="col-4"><a class="instagram__link" href="https://www.instagram.com/p/BhsbiUXhYrn/?taken-by=_all_steel_irkutsk" target="_blank"><img src="img/instagram/fifth.jpg" alt=""></a></div>
+                    <div class="col-4"><a class="instagram__link" href="https://www.instagram.com/p/BlIY1hXBzZK/?taken-by=_all_steel_irkutsk" target="_blank"><img src="img/instagram/ninth.jpg" alt=""></a></div>
+                    <div class="col-4"><a class="instagram__link" href="https://www.instagram.com/p/BnyhQCwh3kO/?taken-by=_all_steel_irkutsk" target="_blank"><img src="img/instagram/fourth.jpg" alt=""></a></div>
+                    <div class="col-4"><a class="instagram__link" href="https://www.instagram.com/p/BWIV4VdBek9/?taken-by=_all_steel_irkutsk" target="_blank"><img src="img/instagram/eighth.jpg" alt=""></a></div>
+                    <div class="col-4"><a class="instagram__link" href="https://www.instagram.com/p/BhgkqcwBeLK/?taken-by=_all_steel_irkutsk" target="_blank"><img src="img/instagram/third.jpg" alt=""></a></div>
+                </div>
             </div>
-            <div class="col-sm-8 col-12"><span class="instagram__span">В наш профиль мы еженедельно публикуем жизнь компании и наши новые работы. Заходите подписыватесь > <a
-                    href="https://www.instagram.com/_all_steel_irkutsk/">@_all_steel_irkutsk</a></span></div>
+            <div class="col-sm-8 col-12"><span class="instagram__span">В нашем профиле мы еженедельно публикуем жизнь компании и наши новые работы. Подписывайтесь > <a
+                    href="https://www.instagram.com/_all_steel_irkutsk/" target="_blank">@_all_steel_irkutsk</a></span></div>
         </div>
     </div>
 </div>
@@ -283,18 +298,18 @@
         <div class="row">
             <div class="col-12">
                 <h2>этапы работы</h2></div>
-            <div class="col-sm-3 col-12 stages__number"><span>1</span>
+            <div class="col-sm-3 col-12 stages__number wow zoomIn" data-wow-delay="0.2s"><span>1</span>
                 <p>Вы позвонили
                     <br>+7 3952 668-703 или
                     <br>оставили заявку</p>
             </div>
-            <div class="col-sm-3 col-12 stages__number"><span>2</span>
+            <div class="col-sm-3 col-12 stages__number wow zoomIn" data-wow-delay="0.4s"><span>2</span>
                 <p>Согласовали проект и стоимость с мастером</p>
             </div>
-            <div class="col-sm-3 col-12 stages__number"><span>3</span>
+            <div class="col-sm-3 col-12 stages__number wow zoomIn" data-wow-delay="0.6s"><span>3</span>
                 <p>Мы выполняем работу по вашему проекту</p>
             </div>
-            <div class="col-sm-3 col-12 stages__number"><span>4</span>
+            <div class="col-sm-3 col-12 stages__number wow zoomIn" data-wow-delay="0.8s"><span>4</span>
                 <p>Вы проверяете качество и оставляете отзыв</p>
             </div>
             <div class="col-12"> <span class="stages__header">
@@ -302,7 +317,7 @@
                     </span></div>
             <div class="col-xl-8 offset-xl-2 col-md-10 offset-md-1">
                 <form class="stages__form"><span class="stages__form-offer">Заполните форму, мы оперативно свяжемся с вами!</span>
-                    <div class="row">
+                    <div class="row align-items-center">
                         <input type="text" name="type" value="Оставьте заявку" hidden="hidden">
                         <div class="col-sm-6 col-12">
                             <div class="group">
@@ -365,16 +380,17 @@
                             </div>
                             <div class="col-12 d-flex align-items-center">
                                 <img src="img/icons/phone-black.svg" alt="" class="map__icon">
-                                <a href="tel:89140040430" class="map__phone">8 914 004 04 30</a>
+                                <a href="tel:83952652195" class="map__phone">8 (3952) 652-195</a>
+                            </div>
+                            <div class="col-12 d-flex align-items-center">
+                                <a href="tel:83952652195" class="map__snet"><img src="img/icons/vib-black.svg" alt="" class=""></a>
+                                <a href="tel:83952652195" class="map__snet"><img src="img/icons/tg-black.svg" alt="" class=""></a>
+                                <a href="tel:83952652195" class="map__snet"><img src="img/icons/wa-black.svg" alt="" class=""></a>
+                                <a href="tel:89087736960" class="map__phone">8 (908) 773 6960 </a>
                             </div>
                             <div class="col-12 d-flex align-items-center">
                                 <img src="img/icons/mail.svg" alt="" class="map__icon">
-                                <a href="mailto:mail@iocent.ru" class="map__mail">mail@iocent.ru</a>
-                            </div>
-                            <div class="col-12 d-flex align-items-center">
-                                <img src="img/icons/instagram.svg" alt="" class="map__icon">
-                                <a href="https://www.instagram.com/_all_steel_irkutsk/" target="_blank"
-                                   class="map__mail">Instagram</a>
+                                <a href="mailto:PROMETAL38@YANDEX.RU" class="map__mail">prometal38@yandex.ru</a>
                             </div>
                         </div>
                     </div>
