--- a/legal/index.html
+++ b/legal/index.html
@@ -77,7 +77,7 @@
                         <div class="container">
                             <div class="row align-items-center justify-content-between">
                                 <div class="col-lg-4 col-md-3 col-12">
-                                    <a href="/"><img src="../img/logo.gif" alt="" class="w-100"></a>
+                                    <a href="/"><img src="../img/logo.png" alt="" class="w-100"></a>
                                 </div>
                                 <div class="col-lg-7 col-md-8 col-12">
                                     <div class="row justify-content-between">
@@ -86,7 +86,9 @@
                                         <div class="col-auto vert-margin d-md-block d-none"> <a href="/#works" class="link">НАШИ РАБОТЫ</a> </div>
                                         <div class="col-auto vert-margin d-md-block d-none"> <a href="/#contact" class="link">КОНТАКТЫ</a> </div>
                                         <div class="col-md-auto col-12 d-md-block d-none">
-                                            <a href="tel:83952668703" class="phone"><img src="img/icons/phone.svg" alt="" class="icon">8 (3952) 668 703</a> <a href="mailto:prometal38@yandex.ru" class="mail">prometal38@yandex.ru</a> </div>
+                                            <a href="tel:83952652195" class="phone"><img src="img/icons/phone.svg" alt="" class="icon">8 (3952) 652 195</a>
+                                            <a href="tel:89087736960" class="phone"><img src="img/icons/mobile.svg" alt="" class="icon">8 (908) 773 6960 </a>
+                                            <div class="icon-sn"><a href="viber://chat?number=+79087736960"><img src="/img/icons/vib.svg" alt=""></a><a href=""><img src="/img/icons/tg.svg" alt=""></a><a href="https://api.whatsapp.com/send?phone=89087736960"><img src="/img/icons/wa.svg" alt=""></a></div>
                                     </div>
                                 </div>
                             </div>
@@ -106,14 +108,14 @@
             <div class="row">
                 <div class="col-12">
                     <p>1. Общие положения
-                        <br>1.1. Политика в отношении обработки персональных данных (далее — Политика) направлена на защиту прав и свобод физических лиц, персональные данные которых обрабатывает ЧУ ДПО «ИОЦ» (далее — Оператор).
+                        <br>1.1. Политика в отношении обработки персональных данных (далее — Политика) направлена на защиту прав и свобод физических лиц, персональные данные которых обрабатывает ПРОметалл (далее — Оператор).
                         <br>1.2. Политика разработана в соответствии с п. 2 ч. 1 ст. 18.1 Федерального закона от 27 июля 2006 г. № 152-ФЗ «О персональных данных» (далее — ФЗ «О персональных данных»).
                         <br>1.3. Политика содержит сведения, подлежащие раскрытию в соответствии с ч. 1 ст. 14 ФЗ «О персональных данных», и является общедоступным документом.
                         <br>
                         <br>2. Сведения об операторе
-                        <br>2.1. Оператор ведет свою деятельность по адресу г.Иркутск ул. Ямская 20
-                        <br>2.2. ЧУ ДПО «ИОЦ» (телефон 8 (3952) 577-377 назначен ответственным за организацию обработки персональных данных.)
-                        <br>2.3. База данных информации, содержащей персональные данные граждан Российской Федерации, находится по адресу: geprostoserdov@rambler.ru
+                        <br>2.1. Оператор ведет свою деятельность по адресу г.Иркутск ул. Набережная Иркута д.17а
+                        <br>2.2. ПРОметалл (телефон 8 (3952) 652-195 назначен ответственным за организацию обработки персональных данных.)
+                        <br>2.3. База данных информации, содержащей персональные данные граждан Российской Федерации, находится по адресу: PROMETAL38@YANDEX.RU
                         <br>
                         <br>3. Сведения об обработке персональных данных
                         <br>3.1. Оператор обрабатывает персональные данные на законной и справедливой основе для выполнения возложенных законодательством функций, полномочий и обязанностей, осуществления прав и законных интересов Оператора, работников Оператора и третьих лиц.
@@ -126,7 +128,7 @@
                         <br>4.1. Оператор обрабатывает персональные данные клиентов в рамках правоотношений с Оператором, урегулированных частью второй Гражданского Кодекса Российской Федерации от 26 января 1996 г. № 14-ФЗ, (далее — клиентов).
                         <br>4.2. Оператор обрабатывает персональные данные клиентов в целях соблюдения норм законодательства РФ, а также с целью:
                         <br>— заключать и выполнять обязательства по договорам с клиентами;
-                        <br>— осуществлять виды деятельности, предусмотренные учредительными документами ЧУ ДПО «ИОЦ»
+                        <br>— осуществлять виды деятельности, предусмотренные учредительными документами ПРОметалл
                         <br>— информировать о новых продуктах, специальных акциях и предложениях;
                         <br>— информировать о новых статьях, видео и мероприятиях;
                         <br>— выявлять потребность в продуктах;
@@ -168,8 +170,12 @@
                         <br>6.2. Для реализации своих прав и законных интересов субъекты персональных данных имеют право обратиться к Оператору либо направить запрос лично или с помощью представителя. Запрос должен содержать сведения, указанные в ч. 3 ст. 14 ФЗ «О персональных данных».
                         <br>
                         <br>Утверждаю
-                        <br>ЧУ ДПО «ИОЦ»
-                        <br>05.08.2018 г.</p>
+                        <br>ПРОметалл
+                        <br>05.08.2018 г.
+                        <br>
+                        <br>______________________________
+                        <br>
+                        </p>
                         <br>
                         <a href="/">На главную</a>
                 </div>
@@ -188,8 +194,8 @@
                                 <div class="col-12 d-flex align-items-center"> <img src="../img/icons/market.svg" alt="" class="map__icon">
                                     <p class="map__address">Иркутск, ул. Набережная Иркута д.17а</p>
                                 </div>
-                                <div class="col-12 d-flex align-items-center"> <img src="../img/icons/phone-black.svg" alt="" class="map__icon"> <a href="tel:89140040430" class="map__phone">8 914 004 04 30</a> </div>
-                                <div class="col-12 d-flex align-items-center"> <img src="../img/icons/mail.svg" alt="" class="map__icon"> <a href="mailto:mail@iocent.ru" class="map__mail">mail@iocent.ru</a> </div>
+                                <div class="col-12 d-flex align-items-center"> <img src="../img/icons/phone-black.svg" alt="" class="map__icon"> <a href="tel:83952652195" class="map__phone">8 (3952) 652-195</a> </div>
+                                <div class="col-12 d-flex align-items-center"> <img src="../img/icons/mail.svg" alt="" class="map__icon"> <a href="mailto:PROMETAL38@YANDEX.RU" class="map__mail">PROMETAL38@YANDEX.RU</a> </div>
                             </div>
                         </div>
                         <div class="col-sm-7 col-12 map__ya">
