--- a/index.html
+++ b/index.html
@@ -135,8 +135,8 @@
             <div class="col-md-auto col-12">
                 <h1>Профессионалы<br>по металлу</h1>
                 <p><span class="wow slideInRight" data-wow-delay="0.2s">Сварочные работы, порошковая покраска,</span>
-                    <span class="wow slideInRight" data-wow-delay="0.4s">Пламенная резка и раскрой металла на станке с ЧПУ</span>
-                    <span class="wow slideInRight" data-wow-delay="0.6s">мебели и металлоконструкций</span></p>
+                    <span class="wow slideInRight" data-wow-delay="0.4s">Раскрой металла на станке с ЧПУ</span>
+                    <span class="wow slideInRight" data-wow-delay="0.6s">Изготовление мебели и металлоконструкций</span></p>
                 <button class="go-modal wow zoomIn" data-wow-delay="0.9s">Получить консультацию</button>
             </div>
             <div class="col-12">
@@ -185,9 +185,9 @@
             </div>
             <div class="col-6">
                 <h3>Пламенная резка и раскрой металла на станке с ЧПУ</h3>
-                <p>Производим сварочные работы на выезде. Варим трубы, уголки, петли, свариваем решетки и ограждения,
-                    изготавливаем металлоконструкции. Сварка инвертором. Сварка аргоном. Газовая сварка и резка
-                    металла.</p>
+                <p>Резка материалов плазмой ЧПУ осуществляется
+                максимально точно, и происходит процесс
+                с минимальным участием рабочего.</p>
                 <button data-type="Пламенная резка и раскрой металла на станке с ЧПУ" class="go-modal d-sm-block d-none button">Сделать заказ
                     на гибку/резку
                 </button>
@@ -383,9 +383,9 @@
                                 <a href="tel:83952652195" class="map__phone">8 (3952) 652-195</a>
                             </div>
                             <div class="col-12 d-flex align-items-center">
-                                <a href="tel:83952652195" class="map__snet"><img src="img/icons/vib-black.svg" alt="" class=""></a>
-                                <a href="tel:83952652195" class="map__snet"><img src="img/icons/tg-black.svg" alt="" class=""></a>
-                                <a href="tel:83952652195" class="map__snet"><img src="img/icons/wa-black.svg" alt="" class=""></a>
+                                <a href="viber://chat?number=+79087736960" class="map__snet" target="_blank"><img src="img/icons/vib-black.svg" alt="" class=""></a>
+                                <a href="http://test.zim-kolbasi.ru/" class="map__snet" target="_blank"><img src="img/icons/tg-black.svg" alt="" class=""></a>
+                                <a href="https://api.whatsapp.com/send?phone=89087736960" class="map__snet" target="_blank"><img src="img/icons/wa-black.svg" alt="" class=""></a>
                                 <a href="tel:89087736960" class="map__phone">8 (908) 773 6960 </a>
                             </div>
                             <div class="col-12 d-flex align-items-center">
