--- a/mebel/index.html
+++ b/mebel/index.html
@@ -355,13 +355,15 @@
                             <div class="col-12 d-flex align-items-center"><img src="../img/icons/phone-black.svg" alt=""
                                                                                class="map__icon"> <a
                                     href="tel:83952652195" class="map__phone">8 (3952) 652-195</a></div>
-                            <div class="col-12 d-flex align-items-center"><img src="../img/icons/mail.svg" alt=""
-                                                                               class="map__icon"> <a
-                                    href="mailto:PROMETAL38@YANDEX.RU" class="map__mail">PROMETAL38@YANDEX.RU</a></div>
                             <div class="col-12 d-flex align-items-center">
-                                <img src="img/icons/instagram.svg" alt="" class="map__icon">
-                                <a href="https://www.instagram.com/_all_steel_irkutsk/" target="_blank"
-                                   class="map__mail">Instagram</a>
+                                    <a href="viber://chat?number=+79087736960" class="map__snet" target="_blank"><img src="../img/icons/vib-black.svg" alt="" class=""></a>
+                                    <a href="http://test.zim-kolbasi.ru/" class="map__snet" target="_blank"><img src="../img/icons/tg-black.svg" alt="" class=""></a>
+                                    <a href="https://api.whatsapp.com/send?phone=89087736960" class="map__snet" target="_blank"><img src="../img/icons/wa-black.svg" alt="" class=""></a>
+                                    <a href="tel:89087736960" class="map__phone">8 (908) 773 6960 </a>
+                            </div>
+                            <div class="col-12 d-flex align-items-center">
+                                <img src="../img/icons/mail.svg" alt="" class="map__icon">
+                                <a href="mailto:PROMETAL38@YANDEX.RU" class="map__mail">prometal38@yandex.ru</a>
                             </div>
                         </div>
                     </div>
