--- a/legal/index.html
+++ b/legal/index.html
@@ -103,7 +103,7 @@
                     <div class="col-12">
                         <h1>ПОЛИТИКА В ОТНОШЕНИИ ОБРАБОТКИ ПЕРСОНАЛЬНЫХ ДАННЫХ В ЧУ ДПО «ИОЦ»</h1>
                         <div class="number__mebel d-sm-none d-block">
-                            <a href="tel:83952668703" class="phone"><img src="../img/icons/phone.svg" alt="" class="icon">8 (3952) 668 703</a> <a href="mailto:prometal38@yandex.ru" class="mail">prometal38@yandex.ru</a> </div>
+                            <a href="tel:83952668703" class="phone"><img src="../img/icons/phone.svg" alt="" class="icon">8 (3952) 668 703</a> <a href="mailto:prometal38@mail.ru" class="mail">prometal38@mail.ru</a> </div>
                     </div>
                 </div>
             </div>
@@ -120,7 +120,7 @@
                             <br>2. Сведения об операторе
                             <br>2.1. Оператор ведет свою деятельность по адресу г.Иркутск ул. Набережная Иркута д.17а
                             <br>2.2. ПРОметалл (телефон 8 (3952) 652-195 назначен ответственным за организацию обработки персональных данных.)
-                            <br>2.3. База данных информации, содержащей персональные данные граждан Российской Федерации, находится по адресу: PROMETAL38@YANDEX.RU
+                            <br>2.3. База данных информации, содержащей персональные данные граждан Российской Федерации, находится по адресу: prometal38@mail.ru
                             <br>
                             <br>3. Сведения об обработке персональных данных
                             <br>3.1. Оператор обрабатывает персональные данные на законной и справедливой основе для выполнения возложенных законодательством функций, полномочий и обязанностей, осуществления прав и законных интересов Оператора, работников Оператора и третьих лиц.
@@ -206,7 +206,7 @@
                                     </div>
                                     <div class="col-12 d-flex align-items-center">
                                         <img src="../img/icons/mail.svg" alt="" class="map__icon">
-                                        <a href="mailto:PROMETAL38@YANDEX.RU" class="map__mail">prometal38@yandex.ru</a>
+                                        <a href="mailto:prometal38@mail.ru" class="map__mail">prometal38@mail.ru</a>
                                     </div>
                                 </div>
                             </div>
